@@ -23,6 +23,7 @@ import com.avos.avoscloud.AVException;
 import com.avos.avoscloud.AVObject;
 import com.avos.avoscloud.AVQuery;
 import com.avos.avoscloud.FindCallback;
+import com.avos.avoscloud.LogUtil;
 import com.baidu.mapapi.SDKInitializer;
 import com.baidu.mapapi.map.BaiduMap;
 import com.baidu.mapapi.map.BitmapDescriptor;
@@ -51,18 +52,27 @@ import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
+import java.util.Timer;
+import java.util.TimerTask;
 
 import com.xunce.electrombile.Base.utils.TracksManager.TrackPoint;
 import com.xunce.electrombile.xpg.common.useful.NetworkUtils;
+import com.xunce.electrombile.xpg.ui.utils.ToastUtils;
 
-public class MaptabFragment extends Fragment {
+public class MaptabFragment extends BaseFragment {
 
     private static String TAG = "MaptabFragment:";
     private final String KET_LONG = "lon";
     private final String KET_LAT = "lat";
 
+    //命令字计数器
+    byte firstByteWhere = 0x00;
+    byte secondByteWhere = 0x00;
+
+
+
     //播放线程消息类型
-    enum handleKey{
+    enum handleKey {
         CHANGEPOINT,
         LOCATEMESSAGE,
         HIDEINFOWINDOW,
@@ -70,7 +80,7 @@ public class MaptabFragment extends Fragment {
 
     private Context m_context;
     //获取位置信息的http接口
-    private final String httpBase= "http://api.gizwits.com/app/devdata/";
+    private final String httpBase = "http://api.gizwits.com/app/devdata/";
     public static MapView mMapView;
     private BaiduMap mBaiduMap;
     Button btnLocation;
@@ -95,9 +105,6 @@ public class MaptabFragment extends Fragment {
     //正在播放轨迹标志
     public boolean isPlaying = false;
 
-    private CmdCenter mCenter;
-    SettingManager settingManager;
-
     TextView tvUpdateTime;
     TextView tvStatus;
     InfoWindow mInfoWindow;
@@ -108,33 +115,36 @@ public class MaptabFragment extends Fragment {
     Dialog didDialog;
     private ProgressDialog watiDialog;
 
+    //缓存布局
+    private View rootView;
+
     @Override
-    public void onCreate (Bundle savedInstanceState){
+    public void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
 
-       // Log.i(TAG, "onCreate called!");
+        // Log.i(TAG, "onCreate called!");
         //在使用SDK各组件之前初始化context信息，传入ApplicationContext
         //注意该方法要再setContentView方法之前实现
         SDKInitializer.initialize(this.m_context);
 
-        trackDataList = new ArrayList<TrackPoint>();
-        settingManager = new SettingManager(m_context);
+        trackDataList = new ArrayList<>();
+        //      settingManager = new SettingManager(m_context);
 
-        mCenter = CmdCenter.getInstance(m_context);
+        //       mCenter = CmdCenter.getInstance(m_context);
         currentTrack = new TrackPoint(new Date(), 0, 0);
 
-        LayoutInflater inflater = (LayoutInflater)m_context
+        LayoutInflater inflater = (LayoutInflater) m_context
                 .getSystemService(Context.LAYOUT_INFLATER_SERVICE);
         markerView = inflater.inflate(R.layout.view_marker, null);
-        tvUpdateTime = (TextView)markerView.findViewById(R.id.tv_updateTime);
-        tvStatus = (TextView)markerView.findViewById(R.id.tv_statuse);
+        tvUpdateTime = (TextView) markerView.findViewById(R.id.tv_updateTime);
+        tvStatus = (TextView) markerView.findViewById(R.id.tv_statuse);
 
         didDialog = new AlertDialog.Builder(m_context).setMessage(R.string.bindErrorSet)
                 .setTitle(R.string.bindSet)
                 .setPositiveButton(R.string.goBind, new DialogInterface.OnClickListener() {
                     @Override
                     public void onClick(DialogInterface dialogInterface, int i) {
-                        Intent intent = null;
+                        Intent intent;
                         intent = new Intent(m_context, BindingActivity.class);
                         m_context.startActivity(intent);
                     }
@@ -150,14 +160,16 @@ public class MaptabFragment extends Fragment {
         watiDialog.setMessage("正在查询位置信息，请稍后……");
     }
 
-	@Override
-	public View onCreateView(LayoutInflater inflater, ViewGroup container,
-			Bundle savedInstanceState) {
-       // Log.i(TAG, "onCreateView called!");
-		View view = inflater.inflate(R.layout.map_fragment, container, false);
-
-        initView(view);
-        return view;
+    @Override
+    public View onCreateView(LayoutInflater inflater, ViewGroup container,
+                             Bundle savedInstanceState) {
+        // Log.i(TAG, "onCreateView called!");
+        if (rootView == null) {
+            View view = inflater.inflate(R.layout.map_fragment, container, false);
+            initView(view);
+            rootView = view;
+        }
+        return rootView;
     }
 
     @Override
@@ -172,15 +184,15 @@ public class MaptabFragment extends Fragment {
 
         mBaiduMap.setOnMarkerClickListener(new BaiduMap.OnMarkerClickListener() {
             public boolean onMarkerClick(final Marker marker) {
-                if(marker == markerMobile){
-                    mBaiduMap.hideInfoWindow();
-                }
+//                if(marker == markerMobile){
+//                //    mBaiduMap.hideInfoWindow();
+//                }
                 return true;
             }
         });
 
         //开始/暂停播放按钮
-        btnPlay = (Button)v.findViewById(R.id.btn_play);
+        btnPlay = (Button) v.findViewById(R.id.btn_play);
         btnPlay.setVisibility(View.INVISIBLE);
         btnPlay.setOnClickListener(new View.OnClickListener() {
             @Override
@@ -194,7 +206,7 @@ public class MaptabFragment extends Fragment {
             }
         });
 
-        btnPause = (Button)v.findViewById(R.id.btn_pause);
+        btnPause = (Button) v.findViewById(R.id.btn_pause);
         btnPause.setVisibility(View.INVISIBLE);
         btnPause.setOnClickListener(new View.OnClickListener() {
             @Override
@@ -209,9 +221,9 @@ public class MaptabFragment extends Fragment {
         });
 
         //定位电动车按钮
-        btnLocation = (Button)v.findViewById(R.id.btn_location);
+        btnLocation = (Button) v.findViewById(R.id.btn_location);
 
-        btnLocation.setOnClickListener(new View.OnClickListener(){
+        btnLocation.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View view) {
                 //检查网络
@@ -219,7 +231,7 @@ public class MaptabFragment extends Fragment {
                 //检查是否绑定
                 if (checkBind()) return;
 
-                if(mBaiduMap != null){
+                if (mBaiduMap != null) {
                     //LatLng point = getLatestLocation();
                     watiDialog.show();
                     updateLocation();
@@ -228,8 +240,8 @@ public class MaptabFragment extends Fragment {
         });
 
         //历史记录按钮
-        btnRecord = (Button)v.findViewById(R.id.btn_record);
-        btnRecord.setOnClickListener(new View.OnClickListener(){
+        btnRecord = (Button) v.findViewById(R.id.btn_record);
+        btnRecord.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View view) {
 
@@ -239,15 +251,15 @@ public class MaptabFragment extends Fragment {
                 if (checkBind()) return;
                 clearDataAndView();
 
-                Intent intent = new Intent(m_context,RecordActivity.class);
+                Intent intent = new Intent(m_context, RecordActivity.class);
                 startActivity(intent);
             }
         });
 
         //退出查看历史轨迹按钮
-        btnClearTrack = (Button)v.findViewById(R.id.btn_cancel_track);
+        btnClearTrack = (Button) v.findViewById(R.id.btn_cancel_track);
         btnClearTrack.setVisibility(View.INVISIBLE);
-        btnClearTrack.setOnClickListener(new View.OnClickListener(){
+        btnClearTrack.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View view) {
                 AlertDialog dialog = new AlertDialog.Builder(getActivity())
@@ -268,13 +280,12 @@ public class MaptabFragment extends Fragment {
                             }
                         }).create();
                 dialog.show();
-
             }
         });
     }
 
     private boolean checkBind() {
-        if(settingManager.getIMEI().isEmpty()){
+        if (setManager.getIMEI().isEmpty()) {
             didDialog.show();
             return true;
         }
@@ -282,7 +293,7 @@ public class MaptabFragment extends Fragment {
     }
 
     private boolean checkNetwork() {
-        if(!NetworkUtils.isNetworkConnected(m_context)){
+        if (!NetworkUtils.isNetworkConnected(m_context)) {
             networkDialog = NetworkUtils.networkDialog(m_context, true);
             return true;
         }
@@ -291,10 +302,10 @@ public class MaptabFragment extends Fragment {
 
     private void clearDataAndView() {
         //清除轨迹
-        if(tracksOverlay != null)
+        if (tracksOverlay != null)
             tracksOverlay.remove();
         //结束播放线程
-        if(m_playThread != null){
+        if (m_playThread != null) {
             m_playThread.isTimeToDie = true;
         }
         m_playThread = null;
@@ -310,49 +321,63 @@ public class MaptabFragment extends Fragment {
     }
 
     @Override
-    public void onViewCreated(View view, Bundle savedInstanceState){
+    public void onViewCreated(View view, Bundle savedInstanceState) {
 
-            /**
-             * 显示车的位置
-             */
-            //定义Maker坐标点
-            //leacloud服务器清空，暂时自定义数据代替
-            LatLng point = new LatLng(30.5171, 114.4392);
-          //  Log.e(point.latitude + "", point.longitude + "");
-
-            //构建Marker图标
-            BitmapDescriptor bitmap = BitmapDescriptorFactory
-                    .fromResource(R.drawable.icon_gcoding);
-            //构建MarkerOption，用于在地图上添加Marker
-            option2 = new MarkerOptions()
-                    .position(point)
-                    .icon(bitmap);
-            //在地图上添加Marker，并显示
-            markerMobile = (Marker)mBaiduMap.addOverlay(option2);
-
-
-            //将电动车位置移至中心
-            MapStatus mMapStatus = new MapStatus.Builder()
-                    .target(point)
-                    .zoom(mBaiduMap.getMapStatus().zoom * new Double(1.5).floatValue())
-                    .build();
-            //float a = mBaiduMap.getMapStatus().zoom;
-            //定义MapStatusUpdate对象，以便描述地图状态将要发生的变化
-            MapStatusUpdate mMapStatusUpdate = MapStatusUpdateFactory.newMapStatus(mMapStatus);
-            mBaiduMap.setMapStatus(mMapStatusUpdate);
+        /**
+         * 显示车的位置
+         */
+        //定义Maker坐标点
+        //leacloud服务器清空，暂时自定义数据代替
+        LatLng point;
+        if ((!setManager.getInitLocationLat().isEmpty()) && (!setManager.getInitLocationLongitude().isEmpty())) {
+            LogUtil.log.i("lat:::" + Double.valueOf(setManager.getInitLocationLat()));
+            LogUtil.log.i("longitude:::" + Double.valueOf(setManager.getInitLocationLongitude()));
+            point = new LatLng(Double.valueOf(setManager.getInitLocationLat()),
+                    Double.valueOf(setManager.getInitLocationLongitude()));
+            point = mCenter.convertPoint(point);
+        } else {
+            LogUtil.log.i("到了初始位置？");
+            point = new LatLng(30.5171, 114.4392);
         }
+//        LatLng point = new LatLng(Double.valueOf(settingManager.getInitLocationLat()),
+//                Double.valueOf(settingManager.getInitLocationLongitude()));
+        //  Log.e(point.latitude + "", point.longitude + "");
+
+        //构建Marker图标
+        BitmapDescriptor bitmap = BitmapDescriptorFactory
+                .fromResource(R.drawable.icon_gcoding);
+        //构建MarkerOption，用于在地图上添加Marker
+        option2 = new MarkerOptions()
+                .position(point)
+                .icon(bitmap);
+        //在地图上添加Marker，并显示
+        markerMobile = (Marker) mBaiduMap.addOverlay(option2);
+
+
+        //将电动车位置移至中心
+        MapStatus mMapStatus = new MapStatus.Builder()
+                .target(point)
+                .zoom(mBaiduMap.getMapStatus().zoom * new Double(1.5).floatValue())
+                .build();
+        //float a = mBaiduMap.getMapStatus().zoom;
+        //定义MapStatusUpdate对象，以便描述地图状态将要发生的变化
+        MapStatusUpdate mMapStatusUpdate = MapStatusUpdateFactory.newMapStatus(mMapStatus);
+        mBaiduMap.setMapStatus(mMapStatusUpdate);
+    }
+
     //}
-	@Override
-	public void onActivityCreated(Bundle savedInstanceState) {
-		// TODO Auto-generated method stub
-		super.onActivityCreated(savedInstanceState);
-		//((TextView)getView().findViewById(R.id.tvTop)).setText("地图");
-	}
+    @Override
+    public void onActivityCreated(Bundle savedInstanceState) {
+        // TODO Auto-generated method stub
+        super.onActivityCreated(savedInstanceState);
+        //((TextView)getView().findViewById(R.id.tvTop)).setText("地图");
+    }
 
     @Override
     public void onDestroyView() {
         super.onDestroyView();
-    //    Log.i(TAG, "onDestroyView called!");
+        ((ViewGroup) rootView.getParent()).removeView(rootView);
+        //    Log.i(TAG, "onDestroyView called!");
     }
 
     @Override
@@ -360,14 +385,14 @@ public class MaptabFragment extends Fragment {
         // 退出时销毁定位
         //mLocationClient.stop();
         // 关闭定位图层
-       // mBaiduMap.setMyLocationEnabled(false);
+        // mBaiduMap.setMyLocationEnabled(false);
         //continuePlay();
         //pausePlay();
         //清除轨迹
-        if(tracksOverlay != null)
+        if (tracksOverlay != null)
             tracksOverlay.remove();
         //结束播放线程
-        if(m_playThread != null){
+        if (m_playThread != null) {
             m_playThread.isTimeToDie = true;
         }
         m_playThread = null;
@@ -378,60 +403,64 @@ public class MaptabFragment extends Fragment {
         super.onDestroy();
         //clearDataAndView();
     }
+
     @Override
     public void onResume() {
 
         //在activity执行onResume时执行mMapView. onResume ()，实现地图生命周期管理
-     //   Log.i(TAG, "onResume called!");
+        //   Log.i(TAG, "onResume called!");
         mMapView.setVisibility(View.VISIBLE);
         mMapView.onResume();
         super.onResume();
 
         //检查历史轨迹列表，若不为空，则需要绘制轨迹
-        if(trackDataList.size() > 0){
-            if(tracksOverlay != null) tracksOverlay.remove();
+        if (trackDataList.size() > 0) {
+            if (tracksOverlay != null) tracksOverlay.remove();
             locateMobile(trackDataList.get(0));
             enterPlayTrackMode();
             drawLine();
         }
         updateLocation();
     }
+
     @Override
     public void onPause() {
         //在activity执行onPause时执行mMapView. onPause ()，实现地图生命周期管理
-      //  Log.i(TAG, "onPause called!");
+        //  Log.i(TAG, "onPause called!");
         //mMapView.setVisibility(View.INVISIBLE);
         mMapView.onPause();
         super.onPause();
     }
 
-    private void enterPlayTrackMode(){
+    private void enterPlayTrackMode() {
         isPlaying = true;
         btnClearTrack.setVisibility(View.VISIBLE);
         btnPlay.setVisibility(View.VISIBLE);
         btnPause.setVisibility(View.VISIBLE);
     }
-    private void exitPlayTrackMode(){
+
+    private void exitPlayTrackMode() {
         isPlaying = false;
         btnClearTrack.setVisibility(View.INVISIBLE);
         btnPlay.setVisibility(View.INVISIBLE);
         btnPause.setVisibility(View.INVISIBLE);
     }
+
     //暂停更新地图
-    public void pauseMapUpdate(){
+    public void pauseMapUpdate() {
 //        if(mLocationClient == null) return;
 //        mLocationClient.stop();
     }
 
     //恢复更新地图
-    public void resumeMapUpdate(){
+    public void resumeMapUpdate() {
 //        if(mLocationClient == null) return;
 //        mLocationClient.start();
     }
 
     //将地图中心移到某点
-    public void locateMobile(TrackPoint track){
-        if(mBaiduMap == null) return;
+    public void locateMobile(TrackPoint track) {
+        if (mBaiduMap == null) return;
         /**
          *设定中心点坐标
          */
@@ -448,61 +477,43 @@ public class MaptabFragment extends Fragment {
         markerMobile.setPosition(track.point);
 
         //显示悬浮窗，一定时间后消失
-        mBaiduMap.hideInfoWindow();
+        //  mBaiduMap.hideInfoWindow();
         mInfoWindow = new InfoWindow(markerView, track.point, -90);
 
         SimpleDateFormat sdfWithSecond = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
 
         tvUpdateTime.setText(sdfWithSecond.format(track.time));
-        //mBaiduMap.showInfoWindow(mInfoWindow);
-//        new Timer().schedule(new TimerTask() {
-//            @Override
-//            public void run() {
-//                playHandler.sendEmptyMessage(handleKey.HIDEINFOWINDOW.ordinal());
-//            }
-//        }, 1000);
+        mBaiduMap.showInfoWindow(mInfoWindow);
+        new Timer().schedule(new TimerTask() {
+            @Override
+            public void run() {
+                playHandler.sendEmptyMessage(handleKey.HIDEINFOWINDOW.ordinal());
+            }
+        }, 10000);
 
         //更新当前轨迹
         currentTrack = track;
+        watiDialog.dismiss();
     }
-
 
 
     //return longitude and latitude data,if no data, returns null
-    public void updateLocation(){
+    public void updateLocation() {
 
-        AVQuery<AVObject> query = new AVQuery<AVObject>("GPS");
-        query.setLimit(1);
-        String IMEI = new SettingManager(m_context).getIMEI();
-        query.whereEqualTo("IMEI",IMEI) ;
-        query.whereLessThanOrEqualTo("createdAt", Calendar.getInstance().getTime());
-        query.orderByDescending("createdAt");
-        query.findInBackground(new FindCallback<AVObject>() {
-            @Override
-            public void done(List<AVObject> avObjects, AVException e) {
-              //  Log.i(TAG, e + "");
-                if (e == null) {
-                    AVObject avObject = avObjects.get(0);
-                    float fLat = mCenter.parseGPSData((float) avObject.getDouble(KET_LAT));
-                    float fLong = mCenter.parseGPSData((float) avObject.getDouble(KET_LONG));
-                    Date date = avObject.getCreatedAt();
-                    TrackPoint ppp = new TrackPoint(date, mCenter.convertPoint(new LatLng(fLat, fLong)));
-                    //向主线程发出消息，地图定位成功
-                    Message msg = Message.obtain();
-                    msg.what = handleKey.LOCATEMESSAGE.ordinal();
-                    msg.obj = ppp;
-                    playHandler.sendMessage(msg);
-                }
-                else{
-                    watiDialog.dismiss();
-                }
-            }
-        });
+        //透传
+        byte[] serial = mCenter.getSerial(firstByteWhere, secondByteWhere);
+        if (FragmentActivity.pushService != null) {
+            FragmentActivity.pushService.sendMessage1(mCenter.cWhere(serial));
+
+        } else {
+            ToastUtils.showShort(getActivity().getApplicationContext(), "请稍后...");
+        }
+
     }
 
-    private void drawLine(){
-        ArrayList<LatLng> points = new ArrayList<LatLng>();
-        for(TrackPoint tp:trackDataList){
+    private void drawLine() {
+        ArrayList<LatLng> points = new ArrayList<>();
+        for (TrackPoint tp : trackDataList) {
             points.add(tp.point);
         }
         //构建用户绘制多边形的Option对象
@@ -514,21 +525,21 @@ public class MaptabFragment extends Fragment {
         tracksOverlay = mBaiduMap.addOverlay(polylineOption);
     }
 
-    private class PlayRecordThread extends Thread{
-        public  boolean PAUSE = true;
+    private class PlayRecordThread extends Thread {
+        public boolean PAUSE = true;
         int periodMilli = 1000;
         boolean isTimeToDie = false;
 
-        public PlayRecordThread(int period){
+        public PlayRecordThread(int period) {
             periodMilli = period;
         }
 
         @Override
         public void run() {
             super.run();
-            while(!isTimeToDie) {
+            while (!isTimeToDie) {
                 for (TrackPoint pt : trackDataList) {
-                    if(isTimeToDie) return;
+                    if (isTimeToDie) return;
                     //暂停播放
                     synchronized (FragmentActivity.class) {
                         while (PAUSE && (!isTimeToDie)) ;
@@ -548,7 +559,7 @@ public class MaptabFragment extends Fragment {
                     }
 
                     //每次循环结束，检查列表（可能被主线程清空）
-                    if(trackDataList.isEmpty()) return;
+                    if (trackDataList.isEmpty()) return;
                 }
                 PAUSE = true;
             }
@@ -559,30 +570,30 @@ public class MaptabFragment extends Fragment {
         @Override
         public void handleMessage(Message msg) {
             handleKey key = handleKey.values()[msg.what];
-            switch(key){
+            switch (key) {
                 case CHANGEPOINT:
-                    try{
+                    try {
                         locateMobile((TrackPoint) msg.obj);
-                    }catch (Exception e){
-                        
+                    } catch (Exception e) {
+                        e.printStackTrace();
                     }
                     break;
-                case LOCATEMESSAGE:{
+                case LOCATEMESSAGE: {
 
                     watiDialog.dismiss();
 
-                    if(msg.obj != null) {
+                    if (msg.obj != null) {
                         locateMobile((TrackPoint) msg.obj);
                         break;
-                    }else{
+                    } else {
                         Toast.makeText(m_context,
-                                "定位数据获取失败，请重试或检查网络",Toast.LENGTH_LONG).show();
+                                "定位数据获取失败，请重试或检查网络", Toast.LENGTH_LONG).show();
                         break;
                     }
 
                 }
-                case HIDEINFOWINDOW:{
-                    mBaiduMap.hideInfoWindow();
+                case HIDEINFOWINDOW: {
+                    // mBaiduMap.hideInfoWindow();
                     break;
                 }
 
@@ -591,13 +602,17 @@ public class MaptabFragment extends Fragment {
         }
     };
 
-    private void pausePlay(){
-        if(m_playThread!= null)
+    private void pausePlay() {
+        if (m_playThread != null)
             m_playThread.PAUSE = true;
-    };
+    }
 
-    private void continuePlay(){
-        if(m_playThread!= null)
+    private void continuePlay() {
+        if (m_playThread != null)
             m_playThread.PAUSE = false;
-    };
+    }
+
+    public void cancelWaitDialog() {
+        watiDialog.dismiss();
+    }
 }
